# sdl3-defender

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
core/: config.h  font_manager.cpp  font_manager.h  game.cpp  game.h  platform.cpp  platform.h  sound_manager.cpp  sound_manager.h  texture_manager.cpp  texture_manager.h
entities/: health_item.cpp  health_item.h  particle.cpp  particle.h  player.cpp  player.h  projectile.cpp  projectile.h
entities/opponents/: aggressive_opponent.cpp  aggressive_opponent.h  base_opponent.cpp  base_opponent.h  basic_opponent.cpp  basic_opponent.h  sniper_opponent.cpp  sniper_opponent.h
resources/: highscores.txt
